<resources>
    <string name="google_map_key">AIzaSyCqfiDf9t7CAbng2kb8NM7Uvkb5_AdaTOM
    </string>
    <string name="app_name">DELUXE DRIVES</string>
    <string name="closeDrawer">Fechar</string>
    <string name="openDrawer">Abrir</string>
    <string name="client_detail">DETALHES DO CLIENTE</string>
    <string name="info">INFO</string>
    <string name="pickup_location">LOCAL DE ORIGEM</string>
    <string name="drop_location">DESTINO</string>
    <string name="other_docs">Outros Documentos</string>
    <string name="customer_info">INFORMAÇÃO DO PASSAGEIRO</string>
    <string name="address">Endereço</string>
    <string name="my_location">MINHA LOCALIZAÇÃO</string>
    <string name="getting_location">Buscando local...</string>
    <string name="your_account">SEUS DADOS</string>
    <string name="trip_conformation">CONFIRMAÇÃO DA VIAGEM</string>
    <string name="accept">ACEITAR</string>
    <string name="reject">RECUSAR</string>
    <string name="register">REGISTRAR</string>
    <string name="login_as_testing"></string>
    <string name="upload_file">Enviar arquivo</string>
    <string name="image_file">Imagem</string>
    <string name="pdf_file">PDF</string>
    <string name="cancel">CANCELAR</string>
    <string name="new_version">Nova versão disponível</string>
    <string name="force_update">Atualizar</string>
    <string name="oops">Oops !!</string>
    <string name="network_problem">Problema na rede!!</string>
    <string name="exit">SAIR</string>
    <string name="refresh">ATUALIZAR</string>
    <string name="report_issue">Informar erro</string>
    <string name="call_support">Chamar o suporte</string>
    <string name="show_notification">Mostrar recados</string>
    <string name="no_rides">Sem corridas</string>
    <string name="daily_earnings">RECEBIMENTOS HOJE</string>
    <string name="your_location">Sua localização</string>
    <string name="track_ride">Traçar rota</string>
    <string name="bill_details">Detalhes de cobrança</string>
    <string name="total_fare">Custo total</string>
    <string name="call_user">Chamar usuário</string>
    <string name="accept_ride">Aceitar corrida</string>
    <string name="reject_ride">Rejeitar corrida</string>
    <string name="cancel_ride">Cancelar corrida</string>
    <string name="booking_cancel_by_customer">Corrida cancela pelo cliente!</string>
    <string name="this_is_a_mandatory_app_update_please_update_your_app_version_sorry_for_the_inconvenience_thanks">Por favor atualize seu app.</string>
    <string name="update">Atualizar</string>
    <string name="new_version_available">Nova versão disponível</string>
    <string name="ride_start">Iniciar Corrida </string>
    <string name="remind_me_later">Lembrar mais tarde</string>
    <string name="new_text">Próximo</string>
    <string name="total_rides">Total de corridas</string>
    <string name="total_earning">Total de recebimentos</string>
    <string name="version">Versão</string>
    <string name="old_pasword_field_is_empty">Campo senha antiga vazio</string>
    <string name="new_password_field_is_empty">Campo nova senha vazio</string>
    <string name="confirm_password_field_is_empty">Campo confirmação de senha vazio</string>
    <string name="set_password_id_of_min_six_character">Mínimo de 6 letras</string>
    <string name="password_not_matched">Senhas não conferem!!!</string>
    <string name="loading">Carregando...</string>
    <string name="no_data_found">Sem dados</string>
    <string name="service_missing">FALHA NO SERVIÇO</string>
    <string name="update_required">REQUER ATUALIZAÇÃO</string>
    <string name="please_upload_insurance_copy">Envie dados do veículo</string>
    <string name="please_upload_copy">Envie dados da Habilitação</string>
    <string name="please_rc_copy">Envie imagem da Identidade</string>
    <string name="insurance_copy_saved">Dados do veículo salvos</string>
    <string name="lisence_copy_saved">Habilitaçao salva</string>
    <string name="RC_copy_saved">Identidade salva</string>
    <string name="document_copy_saved">Cópias do documentos salva</string>
    <string name="please_enter_email">Digite um email</string>
    <string name="email_can_not_be_empty">Campo de email não pode ser em branco!</string>
    <string name="password_can_not_be_empty">Campo da senha não pode ser em branco</string>
    <string name="please_select_stars">Selecione as estrelas</string>
    <string name="name_can_not_be_empty">Campo de nome não pode ser em branco!</string>
    <string name="phone_can_not_be_empty">Campo de telefone não pode ser em branco!</string>
    <string name="bank_name_empty">Preencha o nome o banco!</string>
    <string name="account_name_empty">Peencha o nome da conta (Ex. Poupança)!</string>
    <string name="account_number_empty">Preencha o número da conta!</string>
    <string name="time_out">Tempo limite estourado</string>
    <string name="no_city_found">Não encontrou cidades</string>
    <string name="please_select_city">Selecione sua cidade</string>
    <string name="no_car_found">Sem tipos de veículos</string>
    <string name="please_select_car_type_first">Selecione tipo de veículo</string>
    <string name="no_car_model_found">Sem modelo</string>
    <string name="please_enter_name">Digite seu nome</string>
    <string name="please_enter_bank_name">Digite o nome do Banco</string>
    <string name="please_enter_account_number">Digite o número da conta</string>
    <string name="please_enter_account_name">Digite o nome da conta. (Ex. Poupança)</string>
    <string name="please_enter_phone">Digite seu telefone</string>
    <string name="please_enter_password">Digite sua senha</string>
    <string name="please_select_car_type">Escolha tipo de veículo</string>
    <string name="please_select_car_model">Please Select Car Model</string>
    <string name="please_enter_car_number">Digite sua placa</string>
    <string name="please_enter_correct_email">Digite email válido</string>
    <string name="phone_number_should_be_of_ten_digit">Telefone precisa ter 10 números</string>
    <string name="password_should_be_minimum_six_digit">Senha com 6 digitos no mínimo.</string>
    <string name="no_internet_connection">Sem internet</string>
    <string name="please_enter_the_maindatory_details">Digite dados obrigatórios</string>
    <string name="distance_symbol"></string>
    <string name="user_info">Informação do Usuário</string>
    <string name="accpted">Aceito</string>
    <string name="rejected">Recusado</string>
    <string name="reached">Encontrado</string>
    <string name="ongoing">Em progresso</string>
    <string name="new_ride">Nova corrida</string>
    <string name="cancel_by_driver">Cancelado pelo Condutor</string>
    <string name="retry">Repetir</string>
    <string name="enable_app_location">Ative o GPS para usar este aplicativo</string>
    <string name="open_location_settings">Abrir configurações do GPS</string>
    <string name="permission_String">Esta aplicação requer autorizações.</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="last_update_time_label">Tempo de atualização da última localização</string>
    <string name="distance">Distância</string>
    <string name="driver">Condutor</string>
    <string name="getting_your_location_please_move_your_vehicle">Obtendo sua localização. Mova seu veículo.</string>
    <string name="coupon_applied">Desconto aplicado</string>
    <string name="online_status_description_txt">Você está de plantão, para desligar o pedido do cliente, desligue o serviço.</string>
    <string name="tedbottompicker_title">Selecione uma imagem</string>
    <string name="no_image">Sem imagem</string>
    <string name="select_max_count">Já temos %1$d imagens selecionadas</string>
    <string name="select_min_count">Você deve escolher  %1$d imagens</string>
    <string name="create_account">Criar Conta</string>
    <string name="verify_mobile_number">Verificar número do telefone</string>
    <string name="create_password">Criar senha</string>
    <string name="upload_photo">Enviar foto</string>
    <string name="select_image">Selecionar foto</string>
    <string name="wifi_signal_strength_changed">Sinal de wifi alterado</string>
    <string name="ht_service_notification_title">Você está em uma viagem</string>
    <string name="ht_service_notification_text">Clique para ver a viagem</string>
    <string name="search_hint">Buscando...</string>
    <string name="no_result_found">Sem resultados</string>
    <string name="select_country">Selecione um país</string>
    <string name="youAreNotUpdatedTitle">Atualização Disponível</string>
    <string name="youAreNotUpdatedMessage">Uma nova versão está disponível. Atualize</string>
    <string name="youAreNotUpdatedMessage1">agora esta versão</string>
    <string name="required_field_missing">Campo obrigatório</string>
    <string name="no_network_available">Sem rede!</string>
    <string name="rationale_ask_again">Abra as configurações e conceda as permissões necessárias.</string>
    <string name="title_settings_dialog">Permissões necessárias</string>
    <string name="title_activity_meter_image">MeterImageActivity</string>
    <string name="rationale_camera">recurso necessário para acessar sua câmera</string>
    <string name="title_activity_selected_rental_ride">SelectedRentalRideActivity</string>
    <string name="ride_selected_no_data_found">Dados não encontrados</string>
    <string name="rental_type">Tipo</string>
    <string name="PRICE_FARE_ride_fare">Taxa</string>
    <string name="please_confirm_this_receipt_with_customer">Confirme este recebimento com o cliente.</string>
    <string name="PRICE_FARE__tirp_details">Detalhes da corrida</string>
    <string name="PRICE_FARE__total_payable_amount">Valor total a pagar</string>
    <string name="PRICE_FARE____total_distance">Distância Total  :</string>
    <string name="NO_INTERNET_DIALOG_FRAGMENT__no_connection">Sem internet</string>
    <string name="NO_INTERNET_DIALOG_FRAGMENT__please_check_your_internet_connectivity_and_try_again">Verifique sua conexão e tente novamente</string>
    <string name="NO_INTERNET_DIALOG_FRAGMENT__try_again">Tente novamente</string>
    <string name="NO_INTERNET_DIALOG_FRAGMENT__click_here_to_check_your_internet_setting">Clique aqui para testar sua conexão.</string>
    <string name="TRACK_RIDE_RENTAL_ACTIVITY__allert">Alerta !</string>
    <string name="TRACK_RIDE_RENTAL_ACTIVITY__ok">Ok</string>
    <string name="ONLINE_OFFLINE_ACTIVITY__currently_you_are_off_duty_please_turn_on_your_duty_on_in_order_to_get_rides_in_you_area">Atualmente você está offline. Ative-se para receber chamadas.</string>
    <string name="ONLINE_OFFLINE_ACTIVITY__current_status">Status atual</string>
    <string name="ONLINE_OFFLINE_ACTIVITY__on_duty">Livre</string>
    <string name="ONLINE_OFFLINE_ACTIVITY__go_on_duty">Ficar Disponível</string>
    <string name="METER_IMAGE_ACTIVITY__ok">YES</string>
    <string name="VERIFY_OTP">VERIFICAR NUMERO TELEFONICO </string>
    <string name="VERIFY_OTP_text">DIGITE O CÓDIGO</string>
    <string name="REGISTER_ACTIVITY__continue">CONTINUAR</string>
    <string name="LOGIN_TEXTs">Digite o código enviado para recuperar sua senha!</string>
    <string name="getOTP">OBTER CÓDIGO</string>
    <string name="photo_upload">Envie uma boa foto para se identificar!</string>
    <string name="METER_IMAGE_ACTIVITY__please_upload_a_photo_of_your_meter_of_your_car_or_motorcycle">Evie foto de seu medidor de kilometrage</string>
    <string name="METER_IMAGE_ACTIVITY__enter_meter_value">Digite o valor da quilometragem</string>
    <string name="camera">Camera</string>
    <string name="gallery">Galeria</string>
    <string name="enter_expiry_date_of_your_document">Informe data de vencimento de seu documento</string>
    <string name="submit">Enviar</string>
    <string name="ride_cancelled_bu_admin">Corrida cancelada pelo Admin</string>
</resources>