<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/lbl_your_name"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_sad_cloud"
        android:tint="@color/icons_8_muted_grey"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:text="@string/NO_INTERNET_DIALOG_FRAGMENT__no_connection" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NO_INTERNET_DIALOG_FRAGMENT__please_check_your_internet_connectivity_and_try_again"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:layout_marginTop="10dp"/>

    <android.support.v7.widget.CardView
        android:layout_width="100dp"
        android:layout_marginTop="15dp"
        android:layout_height="50dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/try_again_btn"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/icons_8_muted_grey">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NO_INTERNET_DIALOG_FRAGMENT__try_again"
                android:textColor="@color/pure_white"
                android:background="@color/icons_8_muted_grey"
                android:padding="5dp"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NO_INTERNET_DIALOG_FRAGMENT__click_here_to_check_your_internet_setting"
        android:textColor="@color/icons_8_muted_blue"
        android:textStyle=""
        android:id="@+id/internet_settings"
        android:layout_marginTop="25dp"/>

</LinearLayout>