<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.globalstore.levalidriver.PhotoUploaderActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/icon_8_muted_black"
        android:gravity="center"
        android:orientation="vertical">

        <customviews.typefacesviews.TypefaceDosisRegular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/photo_upload"
            android:textColor="@color/pure_white" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="30dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_camera" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <customviews.typefacesviews.TypefaceDosisRegular
                    android:id="@+id/camera"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="#484848"
                    android:gravity="center"
                    android:text="@string/camera"
                    android:textColor="@color/pure_white"
                    android:textSize="20dp"></customviews.typefacesviews.TypefaceDosisRegular>

                <customviews.typefacesviews.TypefaceDosisRegular
                    android:id="@+id/gallery"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="#bbbbbb"
                    android:gravity="center"
                    android:text="@string/gallery"
                    android:textColor="@color/pure_white"
                    android:textSize="20dp"></customviews.typefacesviews.TypefaceDosisRegular>
            </LinearLayout>

        </android.support.v7.widget.CardView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/enter_expiry_date_of_your_document"
            android:textColor="@color/pure_white" />

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/pure_white"
                android:padding="7dp"
                android:text="DD MM YYYY" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/pure_white"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/submit"
                android:textColor="@color/icon_8_muted_black" />
        </android.support.v7.widget.CardView>

    </LinearLayout>
</android.support.v7.widget.CardView>
